test/errors/alias_out_of_scope.sl
# expect: COMPERROR
{
    alias Num = fixed;
}

Num x = 1;
